<resources>
    <string name="app_name">iRepair</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Login strings -->
    <string name="hint_login_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_title">iRepair - Login</string>
    <string name="login_title_description">Welcome to iRepair application. Please login on your profile !</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="backgroundLogoDesc">iRepair Logo</string>
    <string name="btn_link_to_repairman_signup">Are you a repairman? Sign up here.</string>

    <!--Register strings-->
    <string name="defaultUSerImageDesc">Image</string>
    <string name="hint_register_username">Username</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="txtview_title">USER PROFILE</string>
    <string name="txtview_img_hint">(Select your profile picture)</string>
    <string name="hint_register_name">Name</string>
    <string name="hint_register_surname">Surname</string>
    <string name="hint_register_email">Email</string>
    <string name="hint_register_password">Password</string>
    <string name="hint_register_address">Address</string>
    <string name="hint_register_phone1">Phone 1</string>
    <string name="hint_register_phone2">Phone 2</string>

    <!-- Downloading Update -->
    <string name="dwnl_update_title">Downloading Latest Version &#8230; </string>

    <!-- Categories-->
    <string name="category_construction">Construction</string>
    <string name="category_appliances">Appliances</string>
    <string name="category_cars">Cars</string>
    <string name="category_food">Food</string>
    <string name="catecategory_technology">Technology</string>
    <string name="category_style">Style</string>
    <string name="category_other">Other</string>

    <string name="category_myjobs_title">My jobs</string>
    <string name="category_opened_jobs">Assigned jobs</string>
    <string name="category_confirmed_jobs">Confirmed jobs</string>
    <string name="category_finished_jobs">Finished jobs</string>
    <string name="category_canceled_jobs">Canceled jobs</string>

    <string name="category_settings_title">Settings</string>
    <string name="category_user_settings">User settings</string>
    <string name="category_logout">Logout</string>

    <!-- Large repairman fragmen -->
    <string name="largeFragmentDescriptionTitle">Description:</string>
    <string name="largeFragmentRatingTitle">Rating:</string>
    <string name="largeFragmentProfessionsTitle">Professions:</string>
    <string name="largeFragmentRegionsTitle">Regions:</string>
    <string name="largeFragmentAddressTitle">Address:</string>
    <string name="largeFragmentEmailTitle">Email:</string>
    <string name="largeFragmentMobile1Title">Mobile 1:</string>
    <string name="largeFragmentMobile2Title">Mobile 2:</string>
    <string name="selectRepairmanButton">SELECT</string>
    <string name="cancelRepairmanButton">CANCEL</string>

    <!-- Add new job activity and fragments-->
    <string name="addJobTitle">Add new job:</string>
    <string name="addJobJobTitle">Job title:</string>
    <string name="addJobJobTitleHint">Please insert job title…</string>
    <string name="addJobDescription">Description:</string>
    <string name="addJobDescriptionHint">Please insert job description…</string>
    <string name="addJobSeverity">Severity:</string>
    <string name="addJobStartDate">Start date:</string>
    <string name="addJobStartTime">Start time:</string>
    <string name="addJobEndDate">End date:</string>
    <string name="addJobEndTime">End time:</string>
    <string name="addJobContact">Contact:</string>
    <string name="addJobEmail">Email:</string>
    <string name="addJobEmailHint">Please insert your email…</string>
    <string name="addJobPhone">Phone:</string>
    <string name="addJobPhoneHint">Please insert your phone number…</string>
    <string name="addJobAddress">Address:</string>
    <string name="addJobAddressHint">Please insert your address…</string>
    <string name="addJobAddButton">ADD</string>
    <string name="addJobCancelButton">CANCEL</string>
    <string name="addJobSeveritySpinnerPrompt">Slect job severity:</string>
    <string name="addJobSummary">Summary:</string>

    <!-- For Firebase based activities -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Fullname</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- Next, Cance and Previous Buttons -->
    <string name="buttonNext">Next</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonPrevious">Previous</string>

    <!-- User profile strings -->
    <string name="prompt_password">Password</string>

    <!-- Open job activity -->
    <string name="open_job_title">Title</string>
    <string name="open_job_status_title">Status: </string>
    <string name="open_job_status">Waiting for confirmation...</string>

    <!-- Chat activity -->
    <string name="chat_activity_send_button">SEND</string>



</resources>
