<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_register">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_register"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/userProfileTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="60dp"
                    android:text="@string/txtview_title"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtview_img_hint"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="19dp" />

                <ImageView
                    android:id="@+id/userimage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/user"
                    android:contentDescription="@string/defaultUSerImageDesc"
                    android:padding="15dp"
                    android:layout_below="@+id/userProfileTitle"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp" >



                <EditText
                    android:id="@+id/registerUsername"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_register_username"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint"
                    />

                <EditText
                    android:id="@+id/registerEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_register_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint"
                    />

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />

                <!-- Login Button -->

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@color/white"
                    android:text="@string/btn_register"
                    android:textColor="@color/bg_register" />

                <!-- Link to Login Screen -->


                <Button
                    android:id="@+id/btnLinkToLoginScreen"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dip"
                    android:background="@null"
                    android:text="@string/btn_link_to_login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/inprogress" />
</RelativeLayout>
