<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rpd.irepair.AddNewJobActivity">

    <TextView
        android:id="@+id/addJobTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:text="@string/addJobTitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/addJobParentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/addJobSelectedRepairmanLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/addJobJobTitleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/addJobJobTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="TextView"
                            tools:text="@string/addJobJobTitle" />

                        <ImageView
                            android:id="@+id/addJobJobTitleHelp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@android:drawable/ic_menu_help" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/addJobJobTitleHint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="Name"
                        tools:text="@string/addJobJobTitleHint" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/addJobRepairmanIconLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/addJobRepairmanIcon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/blankuser1" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/addJobDescriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/addJobDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        tools:text="@string/addJobDescription" />

                    <ImageView
                        android:id="@+id/addJobDescriptionHelp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_help" />
                </LinearLayout>

                <EditText
                    android:id="@+id/addJobDescriptionHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Name"
                    tools:text="@string/addJobDescriptionHint" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:id="@+id/addJobSeverityLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/addJobSeverity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addJobSeverity" />

                    <ImageView
                        android:id="@+id/addJobSeverityHelp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_help" />

                    <Spinner
                        android:id="@+id/addJobSeveritySpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </TableRow>

                <TableRow
                    android:id="@+id/addJobStartLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/addJobStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        tools:text="@string/addJobStart" />

                    <ImageView
                        android:id="@+id/addJobStartHelp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_help" />

                    <EditText
                        android:id="@+id/addJobStartDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="date" />

                </TableRow>

                <TableRow
                    android:id="@+id/addJobEndLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/addJobEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        tools:text="@string/addJobEnd" />

                    <ImageView
                        android:id="@+id/addJobEndHelp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_help" />

                    <EditText
                        android:id="@+id/addJobEndDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="date" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:id="@+id/addJobContactLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addJobContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    tools:text="@string/addJobContact" />

                <ImageView
                    android:id="@+id/addJobContactHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_help" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:id="@+id/addJobEmaillayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/addJobEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        tools:text="@string/addJobEmail" />

                    <EditText
                        android:id="@+id/editText7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:text="@string/addJobEmailHint" />

                </TableRow>

                <TableRow
                    android:id="@+id/addJobPhoneLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/addJobPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addJobPhone" />

                    <EditText
                        android:id="@+id/addJobPhoneHint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="phone"
                        android:text="@string/addJobPhoneHint" />
                </TableRow>

            </TableLayout>

            <RelativeLayout
                android:id="@+id/addJobAcceptButtonsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/addJobAddButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10sp"
                    android:background="@color/selectRepairmanButton"
                    android:text="@string/addJobAddButton"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/addJobCancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="10sp"
                    android:layout_toStartOf="@+id/addJobAddButton"
                    android:background="@color/cancelRepairmanButton"
                    android:text="@string/cancelRepairmanButton"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>



</LinearLayout>
