<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context="com.rpd.irepair.AddNewJobActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/addJobTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/addJobContact"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/relativeLayout"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/addJobTitle"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/addJobParentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/addJobContactLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/addJobContact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/addJobContact"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/addJobContactHelp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@android:drawable/ic_menu_help" />
                    </LinearLayout>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableRow
                            android:id="@+id/addJobEmaillayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/addJobEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/addJobEmail"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/addJobEmailEdit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/addJobEmailHint"
                                android:inputType="textEmailAddress"
                                android:textSize="12sp" />

                        </TableRow>

                        <TableRow
                            android:id="@+id/addJobPhoneLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/addJobPhone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/addJobPhone"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/addJobPhoneEdit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="phone"
                                android:hint="@string/addJobPhoneHint"
                                android:textSize="12sp"/>
                        </TableRow>

                    </TableLayout>

                </LinearLayout>
            </ScrollView>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_alignBaseline="@+id/buttonPrevious"
                android:layout_alignBottom="@+id/buttonPrevious"
                android:layout_alignParentStart="true"
                android:background="@color/cancelRepairmanButton"
                android:text="@string/buttonCancel"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_toStartOf="@+id/buttonAddJob"
                android:background="@color/colorPrimary"
                android:text="@string/buttonPrevious"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonAddJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_alignBaseline="@+id/buttonCancel"
                android:layout_alignBottom="@+id/buttonCancel"
                android:layout_alignParentEnd="true"
                android:background="@color/colorPrimaryDark"
                android:text="@string/buttonNext"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/progressView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="12dp"
            android:text="" />

    </RelativeLayout>

</LinearLayout>
